--- a/node/index.html
+++ b/node/index.html
@@ -20,38 +20,10 @@
 <body>
     <!-- CONTAINER FOR CHART -->
     <div id="chart_div"></div>
+    <script type="text/javascript" src="websocket_client.js"></script>
     <script type="text/javascript" loading="lazy" src="https://www.gstatic.com/charts/loader.js"></script>
     <script>
-
-        mqtt = require('mqtt');
-        mqttClient = mqtt.connect('mqtt://0.0.0.0:1883');
-        mqttTopic = 'health_monitoring';
-
-        /* 
-        Subscribe (listen) to MQTT topic and start publishing
-        simulated data after successful MQTT connection 
-        */
-        mqttClient.on('connect', () => {
-            console.log('Mqtt connected.')
-            mqttClient.subscribe(mqttTopic); //subscribe
-            //startStreamSimulation(); //publish
-        })
-
-        mqttClient.on('offline', () => {
-            console.log('Mqtt offline.')
-            mqttClient.unsubscribe(mqttTopic);
-        })
-
-        /* 
-        Message event fires, when new messages
-        arrive on the subscribed topic
-        */
-        mqttClient.on('message', function (topic, message) {
-            let parsedMessage = JSON.parse(message);
-            console.log(parsedMessage)
-        })
-
-
+        /*
         // load current chart package
         google.charts.load("current", {
             packages: ["corechart", "line"]
@@ -98,6 +70,7 @@
             }, 250);
             
         }
+        */
     </script>
 </body>
 
