fixed a bugg where node could not use static routing correctly in docker app.js prettiered refs #1

--- a/node/monitoring.html
+++ b/node/monitoring.html
@@ -16,7 +16,7 @@
 
     <div style="text-align:center;margin-bottom:100px;">
         <input type="text" id="interval" value="Interval in seconds">
-        <button onclick="changeInterval()">change interval</button>
+        <button onclick="change_interval()">change interval</button>
     </div>
         
 </body>
